# dangerously-checked

./: .gitignore  .pre-commit-config.yaml  README.md  dangerfile.js  dangerfile.ts  justfile  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: pr.yml
cli/: main.py  validate_param_type_set.py
scripts/: validate_param_type_set.py
src/cli/: main.py  validate_param_type_set.py
src/dangerously_checked/: __init__.py
